<resources>
    <string name="app_name">Alert</string>
    <string name="find">Find</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="settings">Settings</string>
    <string name="help">Help</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="textNumber">Insert number to send</string>
    <string name="textFind">insert find code</string>
    <string name="textOpen">Insert open code</string>
    <string name="textClose">Insert close code</string>
    <string name="textOn">Insert on code</string>
    <string name="textOff">Insert off code</string>
    <string name="save">Save</string>

    <!-- TODO: Remove or change this placeholder text -->
</resources>
