<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.technosupport.mobile.alarma.MainActivity">

    <Button
        android:id="@+id/find"
        style="@style/buttonMessage"
        android:text="@string/find"
        android:backgroundTint="#FFD600"
        android:onClick="pressedButton"/>
    <Button
        android:id="@+id/open"
        style="@style/buttonMessage"
        android:text="@string/open"
        android:backgroundTint="#FFC107"
        android:layout_below="@id/find"
        android:onClick="pressedButton"/>
    <Button
        android:id="@+id/close"
        style="@style/buttonMessage"
        android:text="@string/close"
        android:backgroundTint="#FF9800"
        android:layout_below="@id/open"
        android:onClick="pressedButton"/>
    <Button
        android:id="@+id/on"
        style="@style/buttonMessage"
        android:text="@string/on"
        android:backgroundTint="#FF5722"
        android:layout_below="@id/close"
        android:onClick="pressedButton"/>
    <Button
        android:id="@+id/off"
        style="@style/buttonMessage"
        android:text="@string/off"
        android:backgroundTint="#F44336"
        android:layout_below="@id/on"
        android:onClick="pressedButton"/>
</LinearLayout>
